fix: alignment of title, positioning of web logo and size of font (title)

--- a/styles/header.css
+++ b/styles/header.css
@@ -2,24 +2,29 @@
   display: flex;
   flex-direction: column;
   margin-bottom: 5rem;
+  height: 10rem;
+  
 }
 
 .header__container {
   display: flex;
   flex-direction: row;
-  margin: 1.5rem auto;
+  justify-content: center;
+  align-items: center;
+  width: 100%; height: 100%;
 }
 
 .header__logo {
-  position: absolute;
-  top: 1rem;
-  left: 1rem;
-  width: 3.5rem; height: 3.5rem;
+  position: relative;
+  top: 0rem;
+  left: -55rem;
+  right: 0rem;
+  width: 5rem; height: 5rem;
 }
 
 .header__title {
   font-family: 'lora';
-  font-size: 1.9rem;
+  font-size: 2.5rem;
   font-weight: 800;
   color: var(--clr-gray-600);
 }
